bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble: error: Unmatched closing brace '}' ignored here
  }
  ^ParotTrouble:6: error: ';' expected but 'else' found.
  else{
  ^